fix blurred video edges

--- a/public/global.css
+++ b/public/global.css
@@ -11,6 +11,7 @@ body {
 	height: 100%;
 	margin: 0;
 	padding: 0px;
+	background-color: black;
 	-webkit-touch-callout: none; /* iOS Safari */
       -webkit-user-select: none; /* Safari */
        -khtml-user-select: none; /* Konqueror HTML */
